--- a/db/families.yaml
+++ b/db/families.yaml
@@ -580,6 +580,26 @@ families:
       role: heir-designated
     - person: james-murdoch
       generation: 3
+  nassau-weilburg:
+    origin: Luxembourg
+    founder: adolphe-nassau
+    sector: monarchy
+    generations: 5
+    status: active
+    note: Casa Granducale del Lussemburgo dal 1890
+    members:
+    - person: grand-duke-jean
+      generation: 4
+      role: Grand Duke 1964-2000
+    - person: grand-duke-henri
+      generation: 5
+      role: Grand Duke 2000-2025
+    - person: guillaume-v-luxembourg
+      generation: 6
+      role: Grand Duke 2025-
+    - person: grand-duchess-charlotte
+      generation: 3
+      role: Grand Duchess 1919-1964
   niarchos:
     origin: Greece, Laconia (Vamvakou)
     founder: stavros-niarchos
@@ -835,6 +855,15 @@ families:
     - person: nathaniel-rothschild-1st-baron
       generation: 3
       role: head UK branch
+    - person: edmond-de-rothschild
+      generation: 6
+      role: Ramo francese (Maurice)
+    - person: benjamin-de-rothschild
+      generation: 7
+      role: heir
+    - person: ariane-de-rothschild
+      generation: 7
+      role: spouse
   rupert:
     origin: South Africa
     founder: anton-rupert
